2013-06-21  Mark Brand  <mabrand@mabrand.nl>

	* include/time.h: Correct typecasts throughout.

2013-06-18  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/io.h (_findfirst*, _findnext*): Remove the __NO_INLINE__
	filter and change the signature to __CRT_MAYBE_INLINE.
	* include/wchar.h (time_t): Remove definition.
	* include/sys/types.h: Add comment for time_t indicating other files
	where time_t is defined.

2013-06-17  Earnie Boyd  <earnie@users.sourceforge.net>

	* include/_mingw.h (__CRT_MAYBE_INLINE): When __NO_INLINE__ defined we
	need to make it _CRTALIAS to avoid auto export issues.
	* include/io.h (_wfindfirst*, _wfindnext*): Remove the __NO_INLINE__
	filter and use __CRT_MAYBE_INLINE definitions.
	* include/wchar.h (_wfindfirst*, _wfindnext*): Correct the declarations.
	(_wfindfirst32i64, _wfindfirst64i32, _wfindnext32i64, _wfindnext64i32):
	Define as __CRT_MAYBE_INLINE.

2013-06-16  Earnie Boyd  <earnie@users.sourceforge.net>

	* NEWS: Add text for MSVCRT_VERSION and for the _CRTALIAS 32bit time_t
	definitions.
	* include/_mingw.h (GCC system_header): Add a __CRT_TESTING__ filter.
	* include/string.h (GCC system_header): Ditto.
	* include/sys/stat.h (GCC system_header): Ditto.
	(string.h): Move the include toward the top of the file.
	(extern "C" {): Move above the filters so that it is not incorrectly
	conditional.
	Correct some comments and move the opening brace to the function
	definition line throughout.
	* include/sys/utime.h (utime): Move declaration to after the declaration
	of _utime64().  Create a _CRTALIAS when _USE_32BIT_TIME_T is undefined.
	Add datatype specifiers within the _CRTALIAS definitions throughout.
	* include/wchar.h (GCC system_header): Add a __CRT_TESTING__ filter.
	(FILENAME_MAX): Define macro if not already defined.
	Correct comments throughout.
	Correct #if...#endif misaligned pair.
	(wcsicmp): Use _CRTALIAS instead of __CRT_INLINE since it is a one line
	function definition.